--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 
 # production
 /build
-
+/.idea
 # misc
 .DS_Store
 .env.local
@@ -23,4 +23,3 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-.idea/
